Fix image links to no longer use php image viewer

--- a/projects/IR_recorder.html
+++ b/projects/IR_recorder.html
@@ -43,7 +43,7 @@
 
     </td>
       <td class="main_image">
-        <a href="picture_viewer.php?img=IR_recorder_media/IR_remote_recorder_1&referer=IR_recorder"><img src="IR_recorder_media/IR_remote_recorder_1.jpg" class="main_image"/></a>
+        <a href="IR_recorder_media/IR_remote_recorder_1.jpg" class="main_image"><img src="IR_recorder_media/IR_remote_recorder_1.jpg" class="main_image"/></a>
       </td>
     </tr>
   
@@ -53,7 +53,7 @@
         <table class="img_table">
       <tr>
         <td class="img_td">
-        <a href="picture_viewer.php?img=IR_recorder_media/IR_remote_recorder_2&referer=IR_recorder"><img src="IR_recorder_media/thumbs/IR_remote_recorder_2_thumb.jpg" class="img_thumb"/></a>
+        <a href="IR_recorder_media/thumbs/IR_remote_recorder_2_thumb.jpg" class="img_thumb"><img src="IR_recorder_media/thumbs/IR_remote_recorder_2_thumb.jpg" class="img_thumb"/></a>
         </td>
 
       </tr>
