--- a/projects/N64_mod.html
+++ b/projects/N64_mod.html
@@ -42,13 +42,13 @@
 
 		  <br/> 
 		  <br/> 
-		  <a href="picture_viewer.php?img=N64_mod_meduia/N64_mod_internals&referer=N64_mod"><img class="section_image" src="N64_mod_media/N64_mod_internals.jpg"/></a>
+		  <a href="N64_mod_media/N64_mod_internals.jpg"><img class="section_image" src="N64_mod_media/N64_mod_internals.jpg"/></a>
 		  </p>
 
 
 	    </td>
 	    <td class="main_image">
-	      <a href="picture_viewer.php?img=N64_mod_media/N64_mod_1&referer=N64_mod"><img src="N64_mod_media/N64_mod_1.jpg" class="main_image"/></a>
+	      <a href="N64_mod_media/N64_mod_1.jpg" class="main_image"><img src="N64_mod_media/N64_mod_1.jpg" class="main_image"/></a>
 	    </td>
 	  </tr>
 	  
@@ -58,7 +58,7 @@
 	      <table class="img_table">
 			<tr>
 			  <td class="img_td">
-				<!--<a href="picture_viewer.php?img=processor_media/Dual_Core_Toplevel&referer=N64_mod"><img src="N64_mod_media/thumbs/.jpg" class="img_thumb"/></a>-->
+				<!--<a href="N64_mod_media/thumbs/.jpg" class="img_thumb"><img src="N64_mod_media/thumbs/.jpg" class="img_thumb"/></a>-->
 			  </td>
 			</tr>
 	      </table>
