--- a/projects/home_automation.html
+++ b/projects/home_automation.html
@@ -32,7 +32,7 @@
 
 	    </td>
 	    <td>
-	      <a href="picture_viewer.php?img=home_automation_media/website_screenshot&referer=home_automation"><img src="home_automation_media/website_screenshot.jpg" class="main_image"/></a>
+	      <a href="home_automation_media/website_screenshot.jpg" class="main_image"><img src="home_automation_media/website_screenshot.jpg" class="main_image"/></a>
 	    </td>
 	  </tr>
   
@@ -42,24 +42,24 @@
 	      <table class="img_table">
 		<tr>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=home_automation_media/Rasberry_Pi_setup&referer=home_automation"><img src="home_automation_media/thumbs/Rasberry_Pi_setup_thumb.jpg" class="img_thumb"/></a>
+		    <a href="home_automation_media/thumbs/Rasberry_Pi_setup_thumb.jpg" class="img_thumb"><img src="home_automation_media/thumbs/Rasberry_Pi_setup_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 	      <td class="img_td">
-		  <a href="picture_viewer.php?img=home_automation_media/IR_module_front&referer=home_automation"><img src="home_automation_media/thumbs/IR_module_front_thumb.jpg" class="img_thumb"/></a>
+		  <a href="home_automation_media/thumbs/IR_module_front_thumb.jpg" class="img_thumb"><img src="home_automation_media/thumbs/IR_module_front_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 	      <td class="img_td">
-		  <a href="picture_viewer.php?img=home_automation_media/IR_module_internals&referer=home_automation"><img src="home_automation_media/thumbs/IR_module_internals_thumb.jpg" class="img_thumb"/></a>
+		  <a href="home_automation_media/thumbs/IR_module_internals_thumb.jpg" class="img_thumb"><img src="home_automation_media/thumbs/IR_module_internals_thumb.jpg" class="img_thumb"/></a>
 		  </td>
           <td class="img_td">
-		    <a href="picture_viewer.php?img=home_automation_media/IR_module_internals2&referer=home_automation"><img src="home_automation_media/thumbs/IR_module_internals2_thumb.jpg" class="img_thumb"/></a>
+		    <a href="home_automation_media/thumbs/IR_module_internals2_thumb.jpg" class="img_thumb"><img src="home_automation_media/thumbs/IR_module_internals2_thumb.jpg" class="img_thumb"/></a>
 		  </td>
           <td class="img_td">
-		    <a href="picture_viewer.php?img=home_automation_media/IR_module_side&referer=home_automation"><img src="home_automation_media/thumbs/IR_module_side_thumb.jpg" class="img_thumb"/></a>
+		    <a href="home_automation_media/thumbs/IR_module_side_thumb.jpg" class="img_thumb"><img src="home_automation_media/thumbs/IR_module_side_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 		</tr>
         <tr>
           <td class="img_td">
-		    <a href="picture_viewer.php?img=home_automation_media/webstite_screenshot&referer=home_automation"><img src="home_automation_media/thumbs/website_screenshot_thumb.jpg" class="img_thumb"/></a>
+		    <a href="home_automation_media/thumbs/website_screenshot_thumb.jpg" class="img_thumb"><img src="home_automation_media/thumbs/website_screenshot_thumb.jpg" class="img_thumb"/></a>
 		  </td>
         </tr>
 
