--- a/projects/home_automation_v2.html
+++ b/projects/home_automation_v2.html
@@ -42,10 +42,10 @@
 			<table>
 				<tr>
 						<td>		
-							<a href="picture_viewer.php?img=home_automation_v2_media/control_hub_external&referer=home_automation_v2"><img class="section_image" src="home_automation_v2_media/control_hub_external.jpg" class="main_image"/></a>
+							<a href="home_automation_v2_media/control_hub_external.jpg" class="main_image"><img class="section_image" src="home_automation_v2_media/control_hub_external.jpg" class="main_image"/></a>
 						</td>
 						<td>
-							<a href="picture_viewer.php?img=home_automation_v2_media/control_hub_internals_0&referer=home_automation_v2"><img class="section_image" src="home_automation_v2_media/control_hub_internals_0.jpg" class="main_image"/></a>
+							<a href="home_automation_v2_media/control_hub_internals_0.jpg" class="main_image"><img class="section_image" src="home_automation_v2_media/control_hub_internals_0.jpg" class="main_image"/></a>
 						</td>
 				</tr>
 			</table>
@@ -72,10 +72,10 @@
 			<table>
 				<tr>
 						<td>		
-							<a href="picture_viewer.php?img=home_automation_v2_media/remote_module_external_1&referer=home_automation_v2"><img class="section_image" src="home_automation_v2_media/remote_module_external_1.jpg" class="main_image"/></a>
+							<a href="home_automation_v2_media/remote_module_external_1.jpg" class="main_image"><img class="section_image" src="home_automation_v2_media/remote_module_external_1.jpg" class="main_image"/></a>
 						</td>
 						<td>
-							<a href="picture_viewer.php?img=home_automation_v2_media/remote_module_internals_1&referer=home_automation_v2"><img class="section_image" src="home_automation_v2_media/remote_module_internals_1.jpg" class="main_image"/></a>
+							<a href="home_automation_v2_media/remote_module_internals_1.jpg" class="main_image"><img class="section_image" src="home_automation_v2_media/remote_module_internals_1.jpg" class="main_image"/></a>
 						</td>
 				</tr>
 			</table>
@@ -101,10 +101,10 @@
 			<table>
 				<tr>
 						<td>		
-							<a href="picture_viewer.php?img=home_automation_v2_media/temperature_page_1&referer=home_automation_v2"><img class="section_image" src="home_automation_v2_media/temperature_page_1.jpg" class="main_image"/></a>
+							<a href="home_automation_v2_media/temperature_page_1.jpg" class="main_image"><img class="section_image" src="home_automation_v2_media/temperature_page_1.jpg" class="main_image"/></a>
 						</td>
 						<td>
-							<a href="picture_viewer.php?img=home_automation_v2_media/humidity_page_1&referer=home_automation_v2"><img class="section_image" src="home_automation_v2_media/humidity_page_1.jpg" class="main_image"/></a>
+							<a href="home_automation_v2_media/humidity_page_1.jpg" class="main_image"><img class="section_image" src="home_automation_v2_media/humidity_page_1.jpg" class="main_image"/></a>
 						</td>
 				</tr>
 			</table>
@@ -123,7 +123,7 @@
 
 		</td>
 	    <td class="main_image">
-	      <a href="picture_viewer.php?img=home_automation_v2_media/home_page&referer=home_automation_v2"><img src="home_automation_v2_media/home_page.jpg" class="main_image"/></a>
+	      <a href="home_automation_v2_media/home_page.jpg" class="main_image"><img src="home_automation_v2_media/home_page.jpg" class="main_image"/></a>
 	    </td>
 	  </tr>
   
@@ -133,11 +133,11 @@
 	      <table class="img_table">
 			<tr>
 			  <td class="img_td">
-				<a href="picture_viewer.php?img=home_automation_v2_media/remote_module_internals_2&referer=home_automation_v2"><img src="home_automation_v2_media/thumbs/remote_module_internals_2_thumb.jpg" class="img_thumb"/></a>
+				<a href="home_automation_v2_media/thumbs/remote_module_internals_2_thumb.jpg" class="img_thumb"><img src="home_automation_v2_media/thumbs/remote_module_internals_2_thumb.jpg" class="img_thumb"/></a>
 			  </td>
 
 			  <td class="img_td">
-				<a href="picture_viewer.php?img=home_automation_v2_media/remote_module_external_2&referer=home_automation_v2"><img src="home_automation_v2_media/thumbs/remote_module_external_2_thumb.jpg" class="img_thumb"/></a>
+				<a href="home_automation_v2_media/thumbs/remote_module_external_2_thumb.jpg" class="img_thumb"><img src="home_automation_v2_media/thumbs/remote_module_external_2_thumb.jpg" class="img_thumb"/></a>
 			  </td>
 			</tr>
 	      </table>
