--- a/projects/internet_robot.html
+++ b/projects/internet_robot.html
@@ -57,10 +57,10 @@
       <table class="section_image">
 				<tr>
 						<td class="section_image">
-							<a href="picture_viewer.php?img=internet_robot_media/robot_internals_3&referer=internet_robot"><img class="section_image" src="internet_robot_media/robot_internals_3.jpg"/></a>
+							<a href="internet_robot_media/robot_internals_3.jpg"><img class="section_image" src="internet_robot_media/robot_internals_3.jpg"/></a>
 						</td>
 						<td class="section_image">
-							<a href="picture_viewer.php?img=internet_robot_media/robot_schematic&referer=internet_robot"><img class="section_image" src="internet_robot_media/robot_schematic.jpg"/></a>
+							<a href="internet_robot_media/robot_schematic.jpg"><img class="section_image" src="internet_robot_media/robot_schematic.jpg"/></a>
 						</td>
 					</tr>
       </table>
@@ -78,7 +78,7 @@
 			different induction coils and also make a much better base, that is easier to drive onto. 	
 		  </p>
 
-			<a href="picture_viewer.php?img=internet_robot_media/robot_charging_base&referer=internet_robot"><img class="section_image" src="internet_robot_media/robot_charging_base.jpg"/></a>
+			<a href="internet_robot_media/robot_charging_base.jpg"><img class="section_image" src="internet_robot_media/robot_charging_base.jpg"/></a>
 				
 
 			<p class="section_title">Software</p>
@@ -111,7 +111,7 @@
 			a slider for speed control, and 2 toggle switches for headlight and camera control.
 			</p>
 			
-			<a href="picture_viewer.php?img=internet_robot_media/android_app_screenshot&referer=internet_robot"><img class="section_image" src="internet_robot_media/android_app_screenshot.jpg"/></a>
+			<a href="internet_robot_media/android_app_screenshot.jpg"><img class="section_image" src="internet_robot_media/android_app_screenshot.jpg"/></a>
 
 			<p class="section_title">
 			Copy of Code
@@ -124,7 +124,7 @@
 
 	    </td>
 	    <td class="main_image">
-	      <a href="picture_viewer.php?img=internet_robot_media/robot_0&referer=internet_robot"><img src="internet_robot_media/robot_0.jpg" class="main_image"/></a>
+	      <a href="internet_robot_media/robot_0.jpg" class="main_image"><img src="internet_robot_media/robot_0.jpg" class="main_image"/></a>
 	    </td>
 	  </tr>
 
@@ -137,49 +137,49 @@
 	      <table class="img_table">
     		<tr>
           <td class="img_td">
-            <a href="picture_viewer.php?img=internet_robot_media/robot_0&referer=internet_robot"><img src="internet_robot_media/thumbs/robot_0_thumb.jpg" class="img_thumb"/></a>
+            <a href="internet_robot_media/thumbs/robot_0_thumb.jpg" class="img_thumb"><img src="internet_robot_media/thumbs/robot_0_thumb.jpg" class="img_thumb"/></a>
           </td>
           <td class="img_td">
-            <a href="picture_viewer.php?img=internet_robot_media/robot_1&referer=internet_robot"><img src="internet_robot_media/thumbs/robot_1_thumb.jpg" class="img_thumb"/></a>
+            <a href="internet_robot_media/thumbs/robot_1_thumb.jpg" class="img_thumb"><img src="internet_robot_media/thumbs/robot_1_thumb.jpg" class="img_thumb"/></a>
           </td>
           <td class="img_td">
-            <a href="picture_viewer.php?img=internet_robot_media/robot_back&referer=internet_robot"><img src="internet_robot_media/thumbs/robot_back_thumb.jpg" class="img_thumb"/></a>
+            <a href="internet_robot_media/thumbs/robot_back_thumb.jpg" class="img_thumb"><img src="internet_robot_media/thumbs/robot_back_thumb.jpg" class="img_thumb"/></a>
           </td>
-          <td class="img_td"> <a href="picture_viewer.php?img=internet_robot_media/robot_front&referer=internet_robot"><img src="internet_robot_media/thumbs/robot_front_thumb.jpg" class="img_thumb"/></a>
+          <td class="img_td"> <a href="internet_robot_media/thumbs/robot_front_thumb.jpg" class="img_thumb"><img src="internet_robot_media/thumbs/robot_front_thumb.jpg" class="img_thumb"/></a>
           </td>
           <td class="img_td">
-            <a href="picture_viewer.php?img=internet_robot_media/building_robot_1&referer=internet_robot"><img src="internet_robot_media/thumbs/building_robot_1_thumb.jpg" class="img_thumb"/></a>
+            <a href="internet_robot_media/thumbs/building_robot_1_thumb.jpg" class="img_thumb"><img src="internet_robot_media/thumbs/building_robot_1_thumb.jpg" class="img_thumb"/></a>
           </td>
         </tr> 
         <tr>
           <td class="img_td">
-            <a href="picture_viewer.php?img=internet_robot_media/building_robot_2&referer=internet_robot"><img src="internet_robot_media/thumbs/building_robot_2_thumb.jpg" class="img_thumb"/></a>
+            <a href="internet_robot_media/thumbs/building_robot_2_thumb.jpg" class="img_thumb"><img src="internet_robot_media/thumbs/building_robot_2_thumb.jpg" class="img_thumb"/></a>
           </td>
           <td class="img_td">
-            <a href="picture_viewer.php?img=internet_robot_media/building_robot_0&referer=internet_robot"><img src="internet_robot_media/thumbs/building_robot_0_thumb.jpg" class="img_thumb"/></a>
+            <a href="internet_robot_media/thumbs/building_robot_0_thumb.jpg" class="img_thumb"><img src="internet_robot_media/thumbs/building_robot_0_thumb.jpg" class="img_thumb"/></a>
           </td>
           <td class="img_td">
-            <a href="picture_viewer.php?img=internet_robot_media/robot_internals_1&referer=internet_robot"><img src="internet_robot_media/thumbs/robot_internals_1_thumb.jpg" class="img_thumb"/></a>
+            <a href="internet_robot_media/thumbs/robot_internals_1_thumb.jpg" class="img_thumb"><img src="internet_robot_media/thumbs/robot_internals_1_thumb.jpg" class="img_thumb"/></a>
           </td>
           <td class="img_td">
-            <a href="picture_viewer.php?img=internet_robot_media/robot_internals_2&referer=internet_robot"><img src="internet_robot_media/thumbs/robot_internals_2_thumb.jpg" class="img_thumb"/></a>
+            <a href="internet_robot_media/thumbs/robot_internals_2_thumb.jpg" class="img_thumb"><img src="internet_robot_media/thumbs/robot_internals_2_thumb.jpg" class="img_thumb"/></a>
           </td>
           <td class="img_td">
-            <a href="picture_viewer.php?img=internet_robot_media/robot_charging_base&referer=internet_robot"><img src="internet_robot_media/thumbs/robot_charging_base_thumb.jpg" class="img_thumb"/></a>
+            <a href="internet_robot_media/thumbs/robot_charging_base_thumb.jpg" class="img_thumb"><img src="internet_robot_media/thumbs/robot_charging_base_thumb.jpg" class="img_thumb"/></a>
           </td>
 		    </tr>
         <tr>
           <td class="img_td">
-            <a href="picture_viewer.php?img=internet_robot_media/robot_charging_base_1&referer=internet_robot"><img src="internet_robot_media/thumbs/robot_charging_base_1_thumb.jpg" class="img_thumb"/></a>
+            <a href="internet_robot_media/thumbs/robot_charging_base_1_thumb.jpg" class="img_thumb"><img src="internet_robot_media/thumbs/robot_charging_base_1_thumb.jpg" class="img_thumb"/></a>
           </td>
           <td class="img_td">
-            <a href="picture_viewer.php?img=internet_robot_media/robot_and_base&referer=internet_robot"><img src="internet_robot_media/thumbs/robot_and_base_thumb.jpg" class="img_thumb"/></a>
+            <a href="internet_robot_media/thumbs/robot_and_base_thumb.jpg" class="img_thumb"><img src="internet_robot_media/thumbs/robot_and_base_thumb.jpg" class="img_thumb"/></a>
           </td>
           <td class="img_td">
-            <a href="picture_viewer.php?img=internet_robot_media/robot_and_base_2&referer=internet_robot"><img src="internet_robot_media/thumbs/robot_and_base_2_thumb.jpg" class="img_thumb"/></a>
+            <a href="internet_robot_media/thumbs/robot_and_base_2_thumb.jpg" class="img_thumb"><img src="internet_robot_media/thumbs/robot_and_base_2_thumb.jpg" class="img_thumb"/></a>
           </td>
           <td class="img_td">
-            <a href="picture_viewer.php?img=internet_robot_media/robot_3&referer=internet_robot"><img src="internet_robot_media/thumbs/robot_3_thumb.jpg" class="img_thumb"/></a>
+            <a href="internet_robot_media/thumbs/robot_3_thumb.jpg" class="img_thumb"><img src="internet_robot_media/thumbs/robot_3_thumb.jpg" class="img_thumb"/></a>
           </td>
         </tr>
 
