--- a/projects/minotaur_robot.html
+++ b/projects/minotaur_robot.html
@@ -37,7 +37,7 @@
 
 	    </td>
 	    <td class="main_image">
-	      <a href="picture_viewer.php?img=minotaur_robot_media/MINOTAUR_FINAL_PACKAGING&referer=minotaur_robot"><img src="../media/MINOTAUR_FINAL_PACKAGING.jpg" class="main_image"/></a>
+	      <a href="minotaur_robot_media/MINOTAUR_FINAL_PACKAGING.jpg" class="main_image"><img src="minotaur_robot_media/MINOTAUR_FINAL_PACKAGING.jpg" class="main_image"/></a>
 	    </td>
 	  </tr>
 	  <tr>
@@ -54,70 +54,70 @@
 	      <table class="img_table">
 		<tr>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=minotaur_robot_media/team&referer=minotaur_robot"><img src="minotaur_robot_media/thumbs/team_thumb.jpg" class="img_thumb"/></a>
+		    <a href="minotaur_robot_media/thumbs/team_thumb.jpg" class="img_thumb"><img src="minotaur_robot_media/thumbs/team_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=minotaur_robot_media/chassis_switches&referer=minotaur_robot"><img src="minotaur_robot_media/thumbs/chassis_switches_thumb.jpg" class="img_thumb"/></a>
+		    <a href="minotaur_robot_media/thumbs/chassis_switches_thumb.jpg" class="img_thumb"><img src="minotaur_robot_media/thumbs/chassis_switches_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=minotaur_robot_media/FINAL_BATTERY_PCB&referer=minotaur_robot"><img src="minotaur_robot_media/thumbs/FINAL_BATTERY_PCB_thumb.jpg" class="img_thumb"/></a>
+		    <a href="minotaur_robot_media/thumbs/FINAL_BATTERY_PCB_thumb.jpg" class="img_thumb"><img src="minotaur_robot_media/thumbs/FINAL_BATTERY_PCB_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=minotaur_robot_media/FINAL_MAIN_PCB&referer=minotaur_robot"><img src="minotaur_robot_media/thumbs/FINAL_MAIN_PCB_thumb.jpg" class="img_thumb"/></a>
+		    <a href="minotaur_robot_media/thumbs/FINAL_MAIN_PCB_thumb.jpg" class="img_thumb"><img src="minotaur_robot_media/thumbs/FINAL_MAIN_PCB_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=minotaur_robot_media/H-Bridge_Test1&referer=minotaur_robot"><img src="minotaur_robot_media/thumbs/H-Bridge_Test1_thumb.jpg" class="img_thumb"/></a>
+		    <a href="minotaur_robot_media/thumbs/H-Bridge_Test1_thumb.jpg" class="img_thumb"><img src="minotaur_robot_media/thumbs/H-Bridge_Test1_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 		</tr>
 		<tr>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=minotaur_robot_media/PCBs1&referer=minotaur_robot"><img src="minotaur_robot_media/thumbs/PCBs1_thumb.jpg" class="img_thumb"/></a>
+		    <a href="minotaur_robot_media/thumbs/PCBs1_thumb.jpg" class="img_thumb"><img src="minotaur_robot_media/thumbs/PCBs1_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=minotaur_robot_media/populated PCBs&referer=minotaur_robot"><img src="minotaur_robot_media/thumbs/populated PCBs_thumb.jpg" class="img_thumb"/></a>
+		    <a href="minotaur_robot_media/thumbs/populated PCBs_thumb.jpg" class="img_thumb"><img src="minotaur_robot_media/thumbs/populated PCBs_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=minotaur_robot_media/minotaur_robot_block_diagram&referer=minotaur_robot"><img src="minotaur_robot_media/minotaur_robot_block_diagram.jpg" class="img_thumb"/></a>
+		    <a href="minotaur_robot_media/minotaur_robot_block_diagram.jpg" class="img_thumb"><img src="minotaur_robot_media/minotaur_robot_block_diagram.jpg" class="img_thumb"/></a>
 		  </td>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=minotaur_robot_media/Power_BurnIn&referer=minotaur_robot"><img src="minotaur_robot_media/thumbs/Power_BurnIn_thumb.jpg" class="img_thumb"/></a>
+		    <a href="minotaur_robot_media/thumbs/Power_BurnIn_thumb.jpg" class="img_thumb"><img src="minotaur_robot_media/thumbs/Power_BurnIn_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=minotaur_robot_media/internals1&referer=minotaur_robot"><img src="minotaur_robot_media/thumbs/internals1_thumb.jpg" class="img_thumb"/></a>
+		    <a href="minotaur_robot_media/thumbs/internals1_thumb.jpg" class="img_thumb"><img src="minotaur_robot_media/thumbs/internals1_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 		</tr>
 
 		<tr>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=minotaur_robot_media/bench1&referer=minotaur_robot"><img src="minotaur_robot_media/thumbs/bench1_thumb.jpg" class="img_thumb"/></a>
+		    <a href="minotaur_robot_media/thumbs/bench1_thumb.jpg" class="img_thumb"><img src="minotaur_robot_media/thumbs/bench1_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=minotaur_robot_media/neil&referer=minotaur_robot"><img src="minotaur_robot_media/thumbs/neil_thumb.jpg" class="img_thumb"/></a>
+		    <a href="minotaur_robot_media/thumbs/neil_thumb.jpg" class="img_thumb"><img src="minotaur_robot_media/thumbs/neil_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=minotaur_robot_media/packaging2&referer=minotaur_robot"><img src="minotaur_robot_media/thumbs/packaging2_thumb.jpg" class="img_thumb"/></a>
+		    <a href="minotaur_robot_media/thumbs/packaging2_thumb.jpg" class="img_thumb"><img src="minotaur_robot_media/thumbs/packaging2_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=minotaur_robot_media/power_test&referer=minotaur_robot"><img src="minotaur_robot_media/power_test.jpg" class="img_thumb"/></a>
+		    <a href="minotaur_robot_media/power_test.jpg" class="img_thumb"><img src="minotaur_robot_media/power_test.jpg" class="img_thumb"/></a>
 		  </td>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=minotaur_robot_media/project_poster&referer=minotaur_robot"><img src="minotaur_robot_media/thumbs/project_poster_thumb.jpg" class="img_thumb"/></a>
+		    <a href="minotaur_robot_media/thumbs/project_poster_thumb.jpg" class="img_thumb"><img src="minotaur_robot_media/thumbs/project_poster_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 		</tr>
 
 
 <tr>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=minotaur_robot_media/robot_and_atom&referer=minotaur_robot"><img src="minotaur_robot_media/thumbs/robot_and_atom_thumb.jpg" class="img_thumb"/></a>
+		    <a href="minotaur_robot_media/thumbs/robot_and_atom_thumb.jpg" class="img_thumb"><img src="minotaur_robot_media/thumbs/robot_and_atom_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=minotaur_robot_media/robot_shell1&referer=minotaur_robot"><img src="minotaur_robot_media/thumbs/robot_shell1_thumb.jpg" class="img_thumb"/></a>
+		    <a href="minotaur_robot_media/thumbs/robot_shell1_thumb.jpg" class="img_thumb"><img src="minotaur_robot_media/thumbs/robot_shell1_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=minotaur_robot_media/robot_shell2&referer=minotaur_robot"><img src="minotaur_robot_media/thumbs/robot_shell2_thumb.jpg" class="img_thumb"/></a>
+		    <a href="minotaur_robot_media/thumbs/robot_shell2_thumb.jpg" class="img_thumb"><img src="minotaur_robot_media/thumbs/robot_shell2_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=minotaur_robot_media/power_test&referer=minotaur_robot"><img src="minotaur_robot_media/power_test.jpg" class="img_thumb"/></a>
+		    <a href="minotaur_robot_media/power_test.jpg" class="img_thumb"><img src="minotaur_robot_media/power_test.jpg" class="img_thumb"/></a>
 		  </td>
 		  
 		</tr>
