--- a/projects/night_vision.html
+++ b/projects/night_vision.html
@@ -37,8 +37,8 @@
 
       <table>
         <tr>
-          <td><a href="picture_viewer.php?img=night_vision_media/ir_filter_annotated&referer=night_vision"><img class="section_image" src="night_vision_media/ir_filter_annotated.jpg"></a></td>
-          <td><a href="picture_viewer.php?img=night_vision_media/phone_inside_annotated&referer=night_vision"><img class="section_image" src="night_vision_media/phone_inside_annotated.jpg"></a></td>
+          <td><a href="night_vision_media/ir_filter_annotated.jpg"><img class="section_image" src="night_vision_media/ir_filter_annotated.jpg"></a></td>
+          <td><a href="night_vision_media/phone_inside_annotated.jpg"><img class="section_image" src="night_vision_media/phone_inside_annotated.jpg"></a></td>
         </tr>
       </table>
 
@@ -50,8 +50,8 @@
 
       <table>
         <tr>
-          <td><a href="picture_viewer.php?img=night_vision_media/nv_goggles_inside1&referer=night_vision"><img class="section_image" src="night_vision_media/nv_goggles_inside1.jpg"></a></td>
-          <td><a href="picture_viewer.php?img=night_vision_media/nv_goggles_inside2&referer=night_vision"><img class="section_image" src="night_vision_media/nv_goggles_inside2.jpg"></a></td>
+          <td><a href="night_vision_media/nv_goggles_inside1.jpg"><img class="section_image" src="night_vision_media/nv_goggles_inside1.jpg"></a></td>
+          <td><a href="night_vision_media/nv_goggles_inside2.jpg"><img class="section_image" src="night_vision_media/nv_goggles_inside2.jpg"></a></td>
 
         </tr>
       </table>
@@ -64,7 +64,7 @@
 
     </td>
       <td class="main_image">
-        <a href="picture_viewer.php?img=night_vision_media/nv_goggles&referer=night_vision"><img src="night_vision_media/nv_goggles.jpg" class="main_image"/></a>
+        <a href="night_vision_media/nv_goggles.jpg" class="main_image"><img src="night_vision_media/nv_goggles.jpg" class="main_image"/></a>
       </td>
     </tr>
   
@@ -75,19 +75,19 @@
       <tr>
 
         <td class="img_td">
-        <a href="picture_viewer.php?img=night_vision_media/nv_goggles_outside1&referer=night_vision"><img src="night_vision_media/thumbs/nv_goggles_outside1_thumb.jpg" class="img_thumb"/></a>
+        <a href="night_vision_media/thumbs/nv_goggles_outside1_thumb.jpg" class="img_thumb"><img src="night_vision_media/thumbs/nv_goggles_outside1_thumb.jpg" class="img_thumb"/></a>
         </td>
 
         <td class="img_td">
-        <a href="picture_viewer.php?img=night_vision_media/night_vision_view1&referer=night_vision"><img src="night_vision_media/thumbs/night_vision_view1_thumb.jpg" class="img_thumb"/></a>
+        <a href="night_vision_media/thumbs/night_vision_view1_thumb.jpg" class="img_thumb"><img src="night_vision_media/thumbs/night_vision_view1_thumb.jpg" class="img_thumb"/></a>
         </td>
 
         <td class="img_td">
-        <a href="picture_viewer.php?img=night_vision_media/nv_goggles_outside2&referer=night_vision"><img src="night_vision_media/thumbs/nv_goggles_outside2_thumb.jpg" class="img_thumb"/></a>
+        <a href="night_vision_media/thumbs/nv_goggles_outside2_thumb.jpg" class="img_thumb"><img src="night_vision_media/thumbs/nv_goggles_outside2_thumb.jpg" class="img_thumb"/></a>
         </td>
 
         <td class="img_td">
-        <a href="picture_viewer.php?img=night_vision_media/night_vision_view2&referer=night_vision"><img src="night_vision_media/thumbs/night_vision_view2_thumb.jpg" class="img_thumb"/></a>
+        <a href="night_vision_media/thumbs/night_vision_view2_thumb.jpg" class="img_thumb"><img src="night_vision_media/thumbs/night_vision_view2_thumb.jpg" class="img_thumb"/></a>
         </td>
 
 
