--- a/projects/pcb_clock.html
+++ b/projects/pcb_clock.html
@@ -82,12 +82,12 @@
                     <table>
                         <tr>
                             <td>
-                                <a href="picture_viewer.php?img=pcb_clock_media/PCB_Clock_schematic_1&referer=pcb_clock">
+                                <a href="pcb_clock_media/PCB_Clock_schematic_1.jpg">
                                     <img class="section_image" src="pcb_clock_media/PCB_Clock_schematic_1.jpg">
                                 </a>
                             </td>
                             <td>
-                                <a href="picture_viewer.php?img=pcb_clock_media/PCB_Clock_schematic_2&referer=pcb_clock">
+                                <a href="pcb_clock_media/PCB_Clock_schematic_2.jpg">
                                     <img class="section_image" src="pcb_clock_media/PCB_Clock_schematic_2.jpg">
                                 </a>
                             </td>
@@ -123,7 +123,7 @@
                     <table align="center">
                         <tr>
                             <td>
-                                <a href="picture_viewer.php?img=pcb_clock_media/pcb_design_1&referer=pcb_clock">
+                                <a href="pcb_clock_media/pcb_design_1.jpg">
                                     <img class="section_image" src="pcb_clock_media/pcb_design_1.jpg">
                                 </a>
                             </td>
@@ -160,19 +160,19 @@
                     <table align="center">
                         <tr>
                             <td colspan=2 align="center">
-                                <a href="picture_viewer.php?img=pcb_clock_media/pcb_manufacture_annotated_1&referer=pcb_clock">
+                                <a href="pcb_clock_media/pcb_manufacture_annotated_1.jpg">
                                     <img class="section_image" src="pcb_clock_media/pcb_manufacture_annotated_1.jpg">
                                 </a>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <a href="picture_viewer.php?img=pcb_clock_media/etching_pcb&referer=pcb_clock">
+                                <a href="pcb_clock_media/etching_pcb.jpg">
                                     <img class="section_image" src="pcb_clock_media/etching_pcb_thumb.jpg">
                                 </a>
                             </td>
                             <td>
-                                <a href="picture_viewer.php?img=pcb_clock_media/etching_pcb2&referer=pcb_clock">
+                                <a href="pcb_clock_media/etching_pcb2.jpg">
                                     <img class="section_image" src="pcb_clock_media/etching_pcb2_thumb.jpg">
                                 </a>
                             </td>
@@ -196,12 +196,12 @@
                     <table>
                         <tr>
                             <td>
-                                <a href="picture_viewer.php?img=pcb_clock_media/pcb_drill&referer=pcb_clock">
+                                <a href="pcb_clock_media/pcb_drill.jpg">
                                     <img class="section_image" src="pcb_clock_media/pcb_drill.jpg">
                                 </a>
                             </td>
                             <td>
-                                <a href="picture_viewer.php?img=pcb_clock_media/pcb_after_drill&referer=pcb_clock">
+                                <a href="pcb_clock_media/pcb_after_drill.jpg">
                                     <img class="section_image" src="pcb_clock_media/pcb_after_drill.jpg">
                                 </a>
                             </td>
@@ -219,12 +219,12 @@
                     <table>
                         <tr>
                             <td>
-                                <a href="picture_viewer.php?img=pcb_clock_media/finished_pcb1&referer=pcb_clock">
+                                <a href="pcb_clock_media/finished_pcb1.jpg">
                                     <img class="section_image" src="pcb_clock_media/finished_pcb1.jpg">
                                 </a>
                             </td>
                             <td>
-                                <a href="picture_viewer.php?img=pcb_clock_media/finished_pcb2&referer=pcb_clock">
+                                <a href="pcb_clock_media/finished_pcb2.jpg">
                                     <img class="section_image" src="pcb_clock_media/finished_pcb2.jpg">
                                 </a>
                             </td>
@@ -285,12 +285,12 @@
                     <table>
                         <tr>
                             <td>
-                                <a href="picture_viewer.php?img=pcb_clock_media/enclosure_design_sketchup&referer=pcb_clock">
+                                <a href="pcb_clock_media/enclosure_design_sketchup.jpg">
                                     <img class="section_image" src="pcb_clock_media/enclosure_design_sketchup.jpg">
                                 </a>
                             </td>
                             <td>
-                                <a href="picture_viewer.php?img=pcb_clock_media/enclosure_design_sketchup2&referer=pcb_clock">
+                                <a href="pcb_clock_media/enclosure_design_sketchup2.jpg">
                                     <img class="section_image" src="pcb_clock_media/enclosure_design_sketchup2.jpg">
                                 </a>
                             </td>
@@ -307,12 +307,12 @@
                     <table>
                         <tr>
                             <td>
-                                <a href="picture_viewer.php?img=pcb_clock_media/enclosure1&referer=pcb_clock">
+                                <a href="pcb_clock_media/enclosure1.jpg">
                                     <img class="section_image" src="pcb_clock_media/enclosure1.jpg">
                                 </a>
                             </td>
                             <td>
-                                <a href="picture_viewer.php?img=pcb_clock_media/enclosure2&referer=pcb_clock">
+                                <a href="pcb_clock_media/enclosure2.jpg">
                                     <img class="section_image" src="pcb_clock_media/enclosure2.jpg">
                                 </a>
                             </td>
@@ -339,24 +339,24 @@
                     <table>
                         <tr>
                             <td>
-                                <a href="picture_viewer.php?img=pcb_clock_media/clock_inside1&referer=pcb_clock">
+                                <a href="pcb_clock_media/clock_inside1.jpg">
                                     <img class="section_image" src="pcb_clock_media/clock_inside1.jpg">
                                 </a>
                             </td>
                             <td>
-                                <a href="picture_viewer.php?img=pcb_clock_media/finished_back&referer=pcb_clock">
+                                <a href="pcb_clock_media/finished_back.jpg">
                                     <img class="section_image" src="pcb_clock_media/finished_back.jpg">
                                 </a>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <a href="picture_viewer.php?img=pcb_clock_media/clock_side&referer=pcb_clock">
+                                <a href="pcb_clock_media/clock_side.jpg">
                                     <img class="section_image" src="pcb_clock_media/clock_side.jpg">
                                 </a>
                             </td>
                             <td>
-                                <a href="picture_viewer.php?img=pcb_clock_media/clock_final&referer=pcb_clock">
+                                <a href="pcb_clock_media/clock_final.jpg">
                                     <img class="section_image" src="pcb_clock_media/clock_final.jpg">
                                 </a>
                             </td>
@@ -385,7 +385,7 @@
 
 
                 <td class="main_image">
-                    <a href="picture_viewer.php?img=pcb_clock_media/pcb_clock_1&referer=pcb_clock">
+                    <a href="pcb_clock_media/pcb_clock_1.jpg">
                         <img src="pcb_clock_media/pcb_clock_title.jpg" class="main_image" />
                     </a>
                 </td>
@@ -399,7 +399,7 @@
                         <tr>
 
                             <td class="img_td">
-                                <a href="picture_viewer.php?img=pcb_clock_media/pcb_printed&referer=pcb_clock">
+                                <a href="pcb_clock_media/pcb_printed.jpg">
                                     <img src="pcb_clock_media/thumbnails/pcb_printed_thumb.jpg" class="img_thumb"
                                     />
                                 </a>
