--- a/projects/power_supply.html
+++ b/projects/power_supply.html
@@ -53,7 +53,7 @@
                         <table align="center">
                             <tr>
                                 <td>
-                                    <a href="picture_viewer.php?img=power_supply_media/block_diagram&referer=power_supply">
+                                    <a href="power_supply_media/block_diagram.jpg">
                                         <img class="section_image" src="power_supply_media/block_diagram.jpg">
                                     </a>
                                 </td>
@@ -78,7 +78,7 @@
                         <table align="center">
                             <tr>
                                 <td>
-                                    <a href="picture_viewer.php?img=power_supply_media/ACDC_schematic&referer=power_supply">
+                                    <a href="power_supply_media/ACDC_schematic.jpg">
                                         <img style="width : 100%; margin : 0px; padding-left : 1em" src="power_supply_media/ACDC_schematic.jpg">
                                     </a>
                                 </td>
@@ -95,12 +95,12 @@
                         <table>
                             <tr>
                                 <td>
-                                    <a href="picture_viewer.php?img=power_supply_media/MainBoard_schematic1&referer=power_supply">
+                                    <a href="power_supply_media/MainBoard_schematic1.jpg">
                                         <img class="section_image" src="power_supply_media/MainBoard_schematic1.jpg">
                                     </a>
                                 </td>
                                 <td>
-                                    <a href="picture_viewer.php?img=power_supply_media/MainBoard_schematic2&referer=power_supply">
+                                    <a href="power_supply_media/MainBoard_schematic2.jpg">
                                         <img class="section_image" src="power_supply_media/MainBoard_schematic2.jpg">
                                     </a>
                                 </td>
@@ -139,12 +139,12 @@
                         <table>
                             <tr>
                                 <td>
-                                    <a href="picture_viewer.php?img=power_supply_media/MainBoard_layout&referer=power_supply">
+                                    <a href="power_supply_media/MainBoard_layout.jpg">
                                         <img class="section_image" src="power_supply_media/MainBoard_layout.jpg">
                                     </a>
                                 </td>
                                 <td>
-                                    <a href="picture_viewer.php?img=power_supply_media/ACDC_layout&referer=power_supply">
+                                    <a href="power_supply_media/ACDC_layout.jpg">
                                         <img class="section_image" src="power_supply_media/ACDC_layout.jpg">
                                     </a>
                                 </td>
@@ -160,12 +160,12 @@
                         <table>
                             <tr>
                                 <td>
-                                    <a href="picture_viewer.php?img=power_supply_media/finished_mainboard&referer=power_supply">
+                                    <a href="power_supply_media/finished_mainboard.jpg">
                                         <img class="section_image" src="power_supply_media/finished_mainboard.jpg">
                                     </a>
                                 </td>
                                 <td>
-                                    <a href="picture_viewer.php?img=power_supply_media/finished_ACDC_board&referer=power_supply">
+                                    <a href="power_supply_media/finished_ACDC_board.jpg">
                                         <img class="section_image" src="power_supply_media/finished_ACDC_board.jpg">
                                     </a>
                                 </td>
@@ -183,12 +183,12 @@
                         <table>
                             <tr>
                                 <td>
-                                    <a href="picture_viewer.php?img=power_supply_media/assembly1&referer=power_supply">
+                                    <a href="power_supply_media/assembly1.jpg">
                                         <img class="section_image" src="power_supply_media/assembly1.jpg">
                                     </a>
                                 </td>
                                 <td>
-                                    <a href="picture_viewer.php?img=power_supply_media/assembly2&referer=power_supply">
+                                    <a href="power_supply_media/assembly2.jpg">
                                         <img class="section_image" src="power_supply_media/assembly2.jpg">
                                     </a>
                                 </td>
@@ -208,12 +208,12 @@
                         <table>
                             <tr>
                                 <td>
-                                    <a href="picture_viewer.php?img=power_supply_media/powersupply_cad_drawing&referer=power_supply">
+                                    <a href="power_supply_media/powersupply_cad_drawing.jpg">
                                         <img class="section_image" src="power_supply_media/powersupply_cad_drawing.jpg">
                                     </a>
                                 </td>
                                 <td>
-                                    <a href="picture_viewer.php?img=power_supply_media/powersupply_cad_drawing2&referer=power_supply">
+                                    <a href="power_supply_media/powersupply_cad_drawing2.jpg">
                                         <img class="section_image" src="power_supply_media/powersupply_cad_drawing2.jpg">
                                     </a>
                                 </td>
@@ -227,12 +227,12 @@
                         <table>
                             <tr>
                                 <td>
-                                    <a href="picture_viewer.php?img=power_supply_media/building_enclosure1&referer=power_supply">
+                                    <a href="power_supply_media/building_enclosure1.jpg">
                                         <img class="section_image" src="power_supply_media/building_enclosure1.jpg">
                                     </a>
                                 </td>
                                 <td>
-                                    <a href="picture_viewer.php?img=power_supply_media/building_enclosure2&referer=power_supply">
+                                    <a href="power_supply_media/building_enclosure2.jpg">
                                         <img class="section_image" src="power_supply_media/building_enclosure2.jpg">
                                     </a>
                                 </td>
@@ -248,24 +248,24 @@
                         <table>
                             <tr>
                                 <td>
-                                    <a href="picture_viewer.php?img=power_supply_media/finished_power_supply2&referer=power_supply">
+                                    <a href="power_supply_media/finished_power_supply2.jpg">
                                         <img class="section_image" src="power_supply_media/finished_power_supply2.jpg">
                                     </a>
                                 </td>
                                 <td>
-                                    <a href="picture_viewer.php?img=power_supply_media/finished_power_supply3&referer=power_supply">
+                                    <a href="power_supply_media/finished_power_supply3.jpg">
                                         <img class="section_image" src="power_supply_media/finished_power_supply3.jpg">
                                     </a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <a href="picture_viewer.php?img=power_supply_media/finished_power_supply5&referer=power_supply">
+                                    <a href="power_supply_media/finished_power_supply5.jpg">
                                         <img class="section_image" src="power_supply_media/finished_power_supply5.jpg">
                                     </a>
                                 </td>
                                 <td>
-                                    <a href="picture_viewer.php?img=power_supply_media/finished_power_supply4&referer=power_supply">
+                                    <a href="power_supply_media/finished_power_supply4.jpg">
                                         <img class="section_image" src="power_supply_media/finished_power_supply4.jpg">
                                     </a>
                                 </td>
@@ -296,7 +296,7 @@
 
 
                     <td class="main_image">
-                        <a href="picture_viewer.php?img=power_supply_media/finished_power_supply&referer=power_supply">
+                        <a href="power_supply_media/finished_power_supply.jpg">
                             <img src="power_supply_media/finished_power_supply.jpg" class="main_image" />
                         </a>
                     </td>
@@ -310,7 +310,7 @@
                             <tr>
 
                                 <td class="img_td">
-                                    <a href="picture_viewer.php?img=pcb_clock_media/pcb_printed&referer=pcb_clock">
+                                    <a href="pcb_clock_media/pcb_printed.jpg">
                                         <img src="pcb_clock_media/thumbnails/pcb_printed_thumb.jpg" class="img_thumb"
                                         />
                                     </a>
