--- a/projects/processor.html
+++ b/projects/processor.html
@@ -27,7 +27,7 @@
 
 			</td>
 			<td>
-			<a href="picture_viewer.php?img=processor_media/Pipeline_Processor_Block_Diagram&referer=processor"><img src="processor_media/Pipeline_Processor_Block_Diagram.jpg" class="main_image"/></a>
+			<a href="processor_media/Pipeline_Processor_Block_Diagram.jpg" class="main_image"><img src="processor_media/Pipeline_Processor_Block_Diagram.jpg" class="main_image"/></a>
 			</td>
 		</tr>
 		
@@ -42,13 +42,13 @@
 			<table class="img_table">
 			<tr>
 			<td class="img_td">
-				<a href="picture_viewer.php?img=processor_media/Dual_Core_Toplevel&referer=processor"><img src="processor_media/thumbs/Dual_Core_Toplevel_thumb.jpg" class="img_thumb"/></a>
+				<a href="processor_media/thumbs/Dual_Core_Toplevel_thumb.jpg" class="img_thumb"><img src="processor_media/thumbs/Dual_Core_Toplevel_thumb.jpg" class="img_thumb"/></a>
 			</td>
 			<td class="img_td">
-				<a href="picture_viewer.php?img=processor_media/dcache&referer=processor"><img src="processor_media/thumbs/dcache_thumb.jpg" class="img_thumb"/></a>
+				<a href="processor_media/thumbs/dcache_thumb.jpg" class="img_thumb"><img src="processor_media/thumbs/dcache_thumb.jpg" class="img_thumb"/></a>
 			</td>
 			<td class="img_td">
-				<a href="picture_viewer.php?img=processor_media/iCache&referer=processor"><img src="processor_media/thumbs/iCache_thumb.jpg" class="img_thumb"/></a>
+				<a href="processor_media/thumbs/iCache_thumb.jpg" class="img_thumb"><img src="processor_media/thumbs/iCache_thumb.jpg" class="img_thumb"/></a>
 			</td>
 			</tr>
 			</table>
