--- a/projects/space_invaders.html
+++ b/projects/space_invaders.html
@@ -32,7 +32,7 @@
 				<iframe style="padding-left:2em" width="640" height="480" src="https://www.youtube.com/embed/DKpgHCdkPW4" frameborder="0" allowfullscreen></iframe>
 	    </td>
 	    <td>
-	      <a href="picture_viewer.php?img=space_invaders_media/space_invaders&referer=space_invaders"><img src="space_invaders_media/space_invaders.jpg" class="main_image"/></a>
+	      <a href="space_invaders_media/space_invaders.jpg" class="main_image"><img src="space_invaders_media/space_invaders.jpg" class="main_image"/></a>
 	    </td>
 	  </tr>
 	  
@@ -43,13 +43,13 @@
 	      <table class="img_table">
 		<tr>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=space_invaders_media/controller&referer=space_invaders"><img src="space_invaders_media/thumbs/controller_thumb.jpg" class="img_thumb"/></a>
+		    <a href="space_invaders_media/thumbs/controller_thumb.jpg" class="img_thumb"><img src="space_invaders_media/thumbs/controller_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=space_invaders_media/project_packaging&referer=space_invaders"><img src="space_invaders_media/thumbs/project_packaging_thumb.jpg" class="img_thumb"/></a>
+		    <a href="space_invaders_media/thumbs/project_packaging_thumb.jpg" class="img_thumb"><img src="space_invaders_media/thumbs/project_packaging_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 		  <td class="img_td">
-		    <a href="picture_viewer.php?img=space_invaders_media/space_invaders_bench&referer=space_invaders"><img src="space_invaders_media/thumbs/space_invaders_bench_thumb.jpg" class="img_thumb"/></a>
+		    <a href="space_invaders_media/thumbs/space_invaders_bench_thumb.jpg" class="img_thumb"><img src="space_invaders_media/thumbs/space_invaders_bench_thumb.jpg" class="img_thumb"/></a>
 		  </td>
 
 		</tr>
