--- a/projects/desk.html
+++ b/projects/desk.html
@@ -52,8 +52,8 @@
 
       <table>
         <tr>
-          <td><a href="picture_viewer.php?img=desk_media/ikea_before&referer=desk"><img class="section_image" src="desk_media/ikea_before.jpg"></a></td>
-          <td><a href="picture_viewer.php?img=desk_media/desk_4&referer=desk"><img class="section_image" src="desk_media/desk_4.jpg"></a></td>
+          <td><a href="desk_media/ikea_before.jpg"><img class="section_image" src="desk_media/ikea_before.jpg"></a></td>
+          <td><a href="desk_media/desk_4.jpg"><img class="section_image" src="desk_media/desk_4.jpg"></a></td>
         </tr>
       </table>
 
@@ -66,8 +66,8 @@
 
       <table>
         <tr>
-          <td><a href="picture_viewer.php?img=desk_media/desk_build_1&referer=desk"><img class="section_image" src="desk_media/desk_build_1.jpg"></a></td>
-          <td><a href="picture_viewer.php?img=desk_media/desk_schematic&referer=desk"><img class="section_image" src="desk_media/desk_schematic.jpg"></a></td>
+          <td><a href="desk_media/desk_build_1.jpg"><img class="section_image" src="desk_media/desk_build_1.jpg"></a></td>
+          <td><a href="desk_media/desk_schematic.jpg"><img class="section_image" src="desk_media/desk_schematic.jpg"></a></td>
         </tr>
       </table>
 
@@ -79,7 +79,7 @@
       <table align="center">
         <tr>
             <td>
-                <a href="picture_viewer.php?img=desk_schematic_UPDATED&referer=desk">
+                <a href="desk_schematic_UPDATED.jpg">
                     <img class="section_image" src="desk_media/desk_schematic_UPDATED.jpg">
                 </a>
             </td>
@@ -94,7 +94,7 @@
 
     </td>
       <td class="main_image">
-        <a href="picture_viewer.php?img=desk_media/desk_1&referer=desk"><img src="desk_media/desk_1.jpg" class="main_image"/></a>
+        <a href="desk_media/desk_1.jpg" class="main_image"><img src="desk_media/desk_1.jpg" class="main_image"/></a>
       </td>
     </tr>
   
@@ -104,21 +104,21 @@
         <table class="img_table">
       <tr>
         <td class="img_td">
-        <a href="picture_viewer.php?img=desk_media/desk_2&referer=desk"><img src="desk_media/thumbs/desk_2_thumb.jpg" class="img_thumb"/></a>
+        <a href="desk_media/thumbs/desk_2_thumb.jpg" class="img_thumb"><img src="desk_media/thumbs/desk_2_thumb.jpg" class="img_thumb"/></a>
         </td>
 
         <td class="img_td">
-        <a href="picture_viewer.php?img=desk_media/desk_3&referer=desk"><img src="desk_media/thumbs/desk_3_thumb.jpg" class="img_thumb"/></a>
-        </td>
-
-
-        <td class="img_td">
-        <a href="picture_viewer.php?img=desk_media/desk_build_2&referer=desk"><img src="desk_media/thumbs/desk_build_2_thumb.jpg" class="img_thumb"/></a>
+        <a href="desk_media/thumbs/desk_3_thumb.jpg" class="img_thumb"><img src="desk_media/thumbs/desk_3_thumb.jpg" class="img_thumb"/></a>
         </td>
 
 
         <td class="img_td">
-        <a href="picture_viewer.php?img=desk_media/desk_hand_crank&referer=desk"><img src="desk_media/thumbs/desk_hand_crank_thumb.jpg" class="img_thumb"/></a>
+        <a href="desk_media/thumbs/desk_build_2_thumb.jpg" class="img_thumb"><img src="desk_media/thumbs/desk_build_2_thumb.jpg" class="img_thumb"/></a>
+        </td>
+
+
+        <td class="img_td">
+        <a href="desk_media/thumbs/desk_hand_crank_thumb.jpg" class="img_thumb"><img src="desk_media/thumbs/desk_hand_crank_thumb.jpg" class="img_thumb"/></a>
         </td>
 
 
